--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,46 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap.min.css";
+@import "~font-awesome/css/font-awesome.css";
+@import "~animate.css/animate.min.css";
+@import url('https://fonts.googleapis.com/css?family=Shadows+Into+Light|Open+Sans');
+
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  padding-top: 5rem;
+  font-family: 'Open Sans', sans-serif;
+}
+
+.cursive {
+  font-family: 'Shadows Into Light', cursive;
+}
+
+.mold {
+  font-family: 'Open Sans', sans-serif;
+}
+
+.main-container {
+  padding: 3rem 1.5rem;
+  text-align: center;
+}
+
+.no-bg {
+  background-color: transparent;
+}
+
+.carousel-indicators li {
+  background-color: black;
+}
+
+.carousel-indicators .active {
+  background-color: gray;
+}
+
+.carousel-item.active,
+.carousel-item-next,
+.carousel-item-prev {
+  display: block;
+}
