--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -2,7 +2,8 @@
   <div class="row">
     <div class="col">
       <div class="jumbotron jumbotron-fluid text-center no-bg">
-        <h1 class="display-3 cursive">Call Us <span class="mold display-4">at</span></h1>
+        <img src="/assets/circleLogo.png" class="img-fluid landingLogo">
+        <h1 class="display-3 cursive mt-3">Call Us <span class="mold display-4">at</span></h1>
         <h1>+58-212-963-0829</h1>
         <hr class="my-4">
         <p class="lead">Otherwise send us an email to</p>
