--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,8 +1,10 @@
 <div class="container">
   <div class="row">
     <div class="col">
+      <!--<img src="/assets/letterLogoHero.png" class="img-fluid">-->
       <div class="jumbotron jumbotron-fluid text-center no-bg">
-        <h1 class="display-3">Great <span class="cursive">Apps</span></h1>
+        <img src="/assets/circleLogo.png" class="img-fluid landingLogo">
+        <h1 class="display-3 mt-3">Great <span class="cursive">Apps</span></h1>
         <h1>by a team of Professionals</h1>
         <p class="lead">with a proven method to deliver reliable software fast</p>
         <hr class="my-4">
