--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -6,23 +6,44 @@
   <a class="navbar-brand" href="#">
     <img src="/assets/navBarLogo.png" class="d-inline-block align-top" alt="">
   </a>
+
   <div class="collapse navbar-collapse" id="navbarToggler" [ngbCollapse]="isCollapsed">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/landing" routerLinkActive="active">Home <span class="sr-only">(current)</span></a>
+      </li>
+    </ul>
+    <!-- Logged user nav bar -->
+    <div *ngIf="isLoggedIn(); else notLoggedBlock">
+      <ul class="navbar-nav mr-auto mt-2 mt-md-0">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/products" routerLinkActive="active">Products</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/tickets" routerLinkActive="active">Tickets</a>
+        </li>
+      </ul>
+
+      <ul class="nav navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" (click)="logOut()">Log Out</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  <!-- Not logged user nav bar -->
+  <ng-template #notLoggedBlock>
     <ul class="navbar-nav mr-auto mt-2 mt-md-0">
-      <li class="nav-item active">
-        <a class="nav-link" routerLink="landing">Home <span class="sr-only">(current)</span></a>
-      </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="services">Services</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="contact">Contact Us</a>
+        <a class="nav-link" routerLink="/contact" routerLinkActive="active">Contact Us</a>
       </li>
     </ul>
 
     <ul class="nav navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="#">Customer Login</a>
+        <a class="nav-link" routerLink="/login" routerLinkActive="active">Customer Login</a>
       </li>
     </ul>
-  </div>
+  </ng-template>
 </nav>
