--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -5,7 +5,7 @@
   </button>
 </div>
 
-<form #loginForm="ngForm" (ngSubmit)="login()">
+<form #loginForm="ngForm" (ngSubmit)="logIn()">
   <div class="container modal-body text-center">
     <div class="form-group row">
       <label for="email" class="col-sm-2 col-md-2 col-form-label">Email</label>
@@ -26,7 +26,7 @@
     </div>
     <div class="form-group row" *ngIf="!isModal">
       <div class="offset-sm-2 col-sm-10 offset-md-1 col-md-1">
-        <button type="button" class="btn btn-primary" (click)="login()">Log In</button>
+        <button type="button" class="btn btn-primary" (click)="logIn()">Log In</button>
       </div>
     </div>
   </div>
